--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,24 +1,3 @@
 <resources>
-    <!--
-    TODO: Before you run your application, you need a Google Maps API key.
-
-    To get one, follow this link, follow the directions and press "Create" at the end:
-
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=89:24:E7:0B:02:13:B3:9D:72:05:A0:78:39:DB:FC:77:FC:24:90:4D%3Bgts.com.mobile
-
-    You can also add your credentials to an existing key, using these values:
-
-    Package name:
-    89:24:E7:0B:02:13:B3:9D:72:05:A0:78:39:DB:FC:77:FC:24:90:4D
-
-    SHA-1 certificate fingerprint:
-    89:24:E7:0B:02:13:B3:9D:72:05:A0:78:39:DB:FC:77:FC:24:90:4D
-
-    Alternatively, follow the directions here:
-    https://developers.google.com/maps/documentation/android/start#get-key
-
-    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
-    string in this file.
-    -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAfTFH-jq9p8MCH48cGuLXog7rHAqvHdeM</string>
 </resources>
