--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +12,13 @@
     tools:context="gts.com.mobile.LoginActivity">
 
     <!-- Login progress -->
+    <ImageView
+        android:id="@+id/bus2"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:contentDescription="@string/app_name"
+        app:srcCompat="@drawable/bus" />
+
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
@@ -64,12 +72,22 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/email_sign_in_button"
+                android:id="@+id/sign_in_btn"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
+                android:background="@color/SteelBlue"
+                android:text="@string/action_sign_in_short"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/descrption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/title_activity_loading"
+                android:textAlignment="center"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
