--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,45 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/SteelBlue"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/Theme.AppCompat.NoActionBar">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        tools:context="gts.com.mobile.MapActivity" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/logout"
-        android:orientation="horizontal">
+        tools:context="gts.com.mobile.MapActivity">
 
-        <ImageButton
-            android:id="@+id/logout"
-            android:layout_below="@+id/map"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:layout_weight="1"
-            android:layout_gravity="bottom"
-            android:src="@drawable/logout" />
+        <!--<ImageButton-->
+            <!--android:id="@+id/logout"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/map"-->
+            <!--android:layout_gravity="bottom|left"-->
+            <!--android:adjustViewBounds="true" />-->
 
-        <ImageButton
+        <!--<ImageButton-->
+            <!--android:id="@+id/profile"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/map"-->
+            <!--android:layout_gravity="right|bottom"-->
+            <!--android:adjustViewBounds="true" />-->
+        <Button
             android:id="@+id/profile"
-            android:layout_below="@+id/map"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:layout_weight="1"
-            android:layout_gravity="bottom"
-            android:src="@drawable/user" />
-    </LinearLayout>
-</LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:text="Profile"
+            android:padding="10dp"
+            android:layout_marginTop="20dp"
+            android:paddingRight="10dp"/>
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|bottom"
+            android:text="Go out"
+            android:padding="10dp"
+            android:layout_marginTop="20dp"
+            android:paddingRight="10dp"/>
+
+    </fragment>
+
+
+
+</FrameLayout>
 
