--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -30,23 +30,14 @@
             <!--android:layout_gravity="right|bottom"-->
             <!--android:adjustViewBounds="true" />-->
         <Button
-            android:id="@+id/profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|bottom"
-            android:text="Profile"
-            android:padding="10dp"
-            android:layout_marginTop="20dp"
-            android:paddingRight="10dp"/>
-        <Button
             android:id="@+id/logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|bottom"
-            android:text="Go out"
-            android:padding="10dp"
             android:layout_marginTop="20dp"
-            android:paddingRight="10dp"/>
+            android:padding="10dp"
+            android:paddingRight="10dp"
+            android:text="Logout" />
 
     </fragment>
 
